# kw-intro-task

./: CMakeLists.txt  hello_test.cpp  readme.md
src/: 1_deducing_types.cpp  4_smart_pointers.cpp  CMakeLists.txt  main.cpp
src/include/: 1_deducing_types.h  2_auto.h  3_moving_to_modern_cpp.h  4_smart_pointers.h  5_move_semantics.h  6_lambda_expressions.h  7_the_concurrency_api.h  8_tweaks.h  9_coroutines.h  FtpExampleAsync.h  FtpExampleCoro.h  FtpExampleSync.h  Generator.h  SyncTaskWait.h  SyncWaitTask.h  Task.h  future_coro.h  log.h  util.h
src/multiply/: CMakeLists.txt  add.cpp  multiply.cpp
tests/: 1_test.cpp  2_test.cpp  3_test.cpp  4_test.cpp  5_test.cpp  6_test.cpp  7_test.cpp  8_test.cpp  9_test.cpp  CMakeLists.txt  MemoryLeakDetector.h  add_test.cpp  multiply_test.cpp
